--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Novik</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="../DenisNovik/css/reset.css">
+    <link rel="stylesheet" href="../DenisNovik/css/style.css">
+    <link rel="stylesheet" href="../DenisNovik/css/media.css">
 </head>
 
 <body>
