--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Novik</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/media.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
@@ -246,19 +246,19 @@
                 </h2>
             </div>
             <div class="portfolio__img">
-                <img src="/images/fashion-store-img.jpg" alt="">
+                <img src="./images/fashion-store-img.jpg" alt="">
             </div>
             <div class="portfolio__link">
                 <a href="#">Online fashion store - Homepage</a>
             </div>
             <div class="portfolio__img">
-                <img src="/images/reebok-img.jpg" alt="">
+                <img src="./images/reebok-img.jpg" alt="">
             </div>
             <div class="portfolio__link">
                 <a href="#">Reebok Store - Concept</a>
             </div>
             <div class="portfolio__img">
-                <img src="/images/braun-img.jpg" alt="">
+                <img src="./images/braun-img.jpg" alt="">
             </div>
             <div class="portfolio__link">
                 <a href="#">Braun Landing Page - Concept</a>
@@ -280,16 +280,16 @@
             </button>
             <div class="contacts__socials">
                 <a href="#" class="contacts__linkedIn">
-                    <img src="/images/linkidin-img.png" alt="">
+                    <img src="./images/linkidin-img.png" alt="">
                 </a>
                 <a href="#" class="contacts__instagram">
-                    <img src="/images/instagram-img.png" alt="">
+                    <img src="./images/instagram-img.png" alt="">
                 </a>
                 <a href="#" class="contacts__behance">
-                    <img src="/images/behance-img.png" alt="">
+                    <img src="./images/behance-img.png" alt="">
                 </a>
                 <a href="#" class="contacts__dribble">
-                    <img src="/images/dribble-img.png" alt="">
+                    <img src="./images/dribble-img.png" alt="">
                 </a>
             </div>
             <div class="contacts__like-me-on-text">
