--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         </div>
     </section>
 
-    <script src="../js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
