--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Denis Novik</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="../DenisNovik/css/media.css">
 </head>
 
 <body>
