--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
             <div class="contacts__text">
                 <p class="text">Want to know more or just chat?<br> You are welcome!</p>
             </div>
-            <button class="contacts__btn">
+            <div class="contacts__btn">
                 <a href="">Send Message</a>
-            </button>
+            </div>
             <div class="contacts__socials">
                 <a href="#" class="contacts__linkedIn">
                     <img src="./images/linkidin-img.png" alt="">
