--- a/index.html
+++ b/index.html
@@ -275,9 +275,7 @@
             <div class="contacts__text">
                 <p class="text">Want to know more or just chat?<br> You are welcome!</p>
             </div>
-            <div class="contacts__btn">
-                <a href="">Send Message</a>
-            </div>
+            <a class="contacts__btn" href="">Send Message</a>
             <div class="contacts__socials">
                 <a href="#" class="contacts__linkedIn">
                     <img src="./images/linkidin-img.png" alt="">
